[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.3"
requests = "^2.33.1"
requests-toolbelt = "^1.0.0"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
pylint = "^4.0.5"
ruff = "^0.15.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.isort]
no-lines-before = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
